--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ idna==3.7
 pydantic==2.7.0
 pydantic_core==2.18.1
 sniffio==1.3.1
-starlette==0.37.2
+starlette>=0.47.2
 typing_extensions==4.11.0
 uvicorn==0.29.0
